# chip-8_py

./: .gitignore  LICENSE  README.md  pyproject.toml
chip_8_py/: main.py
tests/: test_chip_8_py.py
